# vandermeerlab-to-bids

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: build_and_upload_docker_image_dev.yml  build_and_upload_docker_image_latest.yml  dailiy_tests.yml  deploy_tests_on_pull_request.yml  testing_dev.yml
scripts/: convert_all_processed.py  convert_session.py  test_convert_session.py
src/dockerfiles/: dev  latest
src/leifer_lab_to_nwb/manish_2025/: _manish_2025_converter.py
src/leifer_lab_to_nwb/manish_2025/_testing/: test_all_interfaces.py
src/leifer_lab_to_nwb/manish_2025/interfaces/: __init__.py
src/vandermeerlab_to_bids/: __init__.py
src/vandermeerlab_to_bids/_command_line_interface/: _cli.py
src/vandermeerlab_to_bids/manish_2025/: __init__.py  _command_line_interface.py  _manish_2025_converter.py  _odor_sequence_to_bids.py  _odor_sequence_to_nwb.py  convert_dataset.py  convert_processed_session.py  convert_raw_session.py
src/vandermeerlab_to_bids/manish_2025/_scripts/: convert_raw_session.py  test_all_components.py
src/vandermeerlab_to_bids/manish_2025/_testing/: test_all_components.py  test_all_interfaces.py
src/vandermeerlab_to_bids/manish_2025/interfaces/: __init__.py  _odor_intervals.py  _spike_sorting_extractor.py  _spike_sorting_interface.py
src/vandermeerlab_to_bids/utils/: __init__.py  _enhance_metadata.py  _experiment_keys.py
src/vandermeerlab_to_bids/validation/: __init__.py  _base_validator.py  _odor_times.py
